<resources>
    <string name="app_name">Test</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="registration_welcome">Hello, fill form of space traveller!</string>
    <string name="go_button">GO!</string>
    <string name="sex_man">Male</string>
    <string name="sex_female">Female</string>
    <string name="nickname">Nickname</string>
    <string name="human_check">I\'m human!</string>
    <string name="generate_random">Generate random nickname</string>
    <string-array name="planets_to_go">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>